# piplib-gmp-mdt

./: Makefile.am  Makefile.in  configure  configure.ac
doc/: Makefile  Makefile.am  Makefile.in  pip.ps
example/: Makefile  Makefile.am  Makefile.in
include/: Makefile.am  Makefile.in
include/piplib-gmp/: funcall.h  piplib-gmp.h  sol.h  tab.h  type.h
source/: Makefile.am  Makefile.in  integrer.c  piplib.c  sol.c  tab.c  traiter.c
test/: Makefile  Makefile.am  Makefile.in  lineri.ll
