#############################################################################
SUBDIRS 		=

#############################################################################

EXTRA_DIST                =			\
	pip.ps					\
	pip.pdf

MAINTAINERCLEANFILES 	=			\
	Makefile.in

#############################################################################
