#############################################################################
SUBDIRS 		=

#############################################################################

EXTRA_DIST                =			\
	big.dat					\
	big.pip					\
	brisebarre.pip				\
	cg1.dat					\
	cg1.pip					\
	esced.dat				\
	esced.pip				\
	ex.dat					\
	ex.pip					\
	ex2.dat					\
	ex2.pip					\
	example.c				\
	fimmel.dat				\
	fimmel.pip				\
	max.dat					\
	max.pip					\
	negative.pip				\
	small.dat				\
	small.pip				\
	sor1d.pip				\
	square.dat				\
	square.pip				\
	square_max.dat				\
	sven.dat				\
	sven.pip

MAINTAINERCLEANFILES 	=			\
	Makefile.in

#############################################################################
