#############################################################################
SUBDIRS 		=

#############################################################################

MAINTAINERCLEANFILES 	=			\
	Makefile.in

pkginclude_HEADERS 	=			\
	piplib-gmp/funcall.h			\
	piplib-gmp/piplib-gmp.h			\
        piplib-gmp/sol.h			\
	piplib-gmp/tab.h			\
        piplib-gmp/type.h

#############################################################################
